[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/assets/Icons/White/WindowBar/zom in_72px.png" type="Texture" id=1]
[ext_resource path="res://src/assets/Icons/White/WindowBar/cross2.png" type="Texture" id=2]
[ext_resource path="res://src/assets/Icons/White/WindowBar/remove_72px.png" type="Texture" id=3]
[ext_resource path="res://src/Scenes/Window/WindowBar.gd" type="Script" id=4]
[ext_resource path="res://src/assets/Fonts/NotoSans/NotoSans-SemiBoldItalic.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 1.0

[sub_resource type="DynamicFont" id=2]
size = 13
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="WindowBar" type="PanelContainer"]
margin_right = 1120.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 21 )
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )

[node name="Title" type="HBoxContainer" parent="."]
margin_right = 1120.0
margin_bottom = 21.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LeftEmpty" type="Control" parent="Title"]
margin_right = 500.0
margin_bottom = 21.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Title"]
margin_left = 508.0
margin_right = 612.0
margin_bottom = 21.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Veles, Beta v1.3.0"
align = 1
valign = 1

[node name="RightBuffer" type="Control" parent="Title"]
margin_left = 620.0
margin_right = 1120.0
margin_bottom = 21.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Options" type="HBoxContainer" parent="."]
margin_right = 1120.0
margin_bottom = 21.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
alignment = 2

[node name="Minimize" type="TextureButton" parent="Options"]
margin_left = 1015.0
margin_top = 1.0
margin_right = 1050.0
margin_bottom = 19.0
rect_min_size = Vector2( 35, 18 )
mouse_default_cursor_shape = 2
size_flags_vertical = 6
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Maximise" type="TextureButton" parent="Options"]
margin_left = 1050.0
margin_top = 1.0
margin_right = 1085.0
margin_bottom = 19.0
rect_min_size = Vector2( 35, 18 )
mouse_default_cursor_shape = 2
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Quit" type="TextureButton" parent="Options"]
margin_left = 1085.0
margin_right = 1120.0
margin_bottom = 20.0
rect_min_size = Vector2( 35, 20 )
mouse_default_cursor_shape = 2
size_flags_vertical = 6
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_WindowBar_gui_input"]
[connection signal="pressed" from="Options/Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="pressed" from="Options/Maximise" to="." method="_on_Maximise_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
